--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "validate": "office-toolbox validate -m manifest.xml"
   },
   "dependencies": {
-    "office-toolbox": "^0.1.0",
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
     "@angular/platform-browser": "^5.2.9",
     "@angular/platform-browser-dynamic": "^5.2.9",
-    "babel-polyfill": "^6.26.0",
     "@microsoft/office-js-helpers": "^1.0.2",
+    "babel-polyfill": "^6.26.0",
+    "jquery": "^3.3.1",
+    "office-toolbox": "^0.1.0",
     "office-ui-fabric-js": "^1.5.0",
     "zone.js": "^0.8.26"
   },
