--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
+    "@angular/forms": "^7.2.11",
+    "@angular/http": "^7.2.11",
     "@angular/platform-browser": "^5.2.9",
     "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
     "@microsoft/office-js-helpers": "^1.0.2",
     "babel-polyfill": "^6.26.0",
+    "crypto-js": "^3.1.9-1",
+    "cryptojs": "^2.5.3",
     "jquery": "^3.3.1",
     "office-toolbox": "^0.1.0",
     "office-ui-fabric-js": "^1.5.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@types/node": "^10.12.18",
+    "@types/node": "^10.14.4",
     "@types/office-js": "^0.0.140",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -34,9 +39,9 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^5.3.2",
-    "typescript": "^3.2.2",
+    "typescript": "^3.3.4000",
     "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.1.14"
   }
 }
