--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
     "validate": "office-toolbox validate -m manifest.xml"
   },
   "dependencies": {
+    "@angular/animations": "6.0.5",
+    "@angular/cdk": "^5.2.5",
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
     "@angular/forms": "^7.2.11",
     "@angular/http": "^7.2.11",
+    "@angular/material": "^5.2.5",
     "@angular/platform-browser": "^5.2.9",
     "@angular/platform-browser-dynamic": "^5.2.9",
     "@angular/router": "^5.2.9",
     "@microsoft/office-js-helpers": "^1.0.2",
     "babel-polyfill": "^6.26.0",
+    "browser-sync": "^2.26.3",
     "crypto-js": "^3.1.9-1",
     "cryptojs": "^2.5.3",
     "jquery": "^3.3.1",
+    "ng-office-ui-fabric": "^0.16.1",
     "office-toolbox": "^0.1.0",
     "office-ui-fabric-js": "^1.5.0",
     "zone.js": "^0.8.26"
@@ -35,9 +40,13 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.2",
     "typescript": "^3.3.4000",
     "webpack": "^4.28.2",
