--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-office-add-in",
+  "name": "letscontract",
   "description": "",
   "author": "",
   "version": "0.1.0",
@@ -15,6 +15,7 @@
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^7.2.11",
     "@angular/http": "^7.2.11",
     "@angular/material": "^5.2.5",
